{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 7,
  "lineage": "64e904ee-75b3-5477-3537-f597e89238ea",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.241.233.68",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-06-11T10:51:49.626-07:00",
            "id": "infra-273217/europe-west1/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-273217",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-273217/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-11T10:51:49.475-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/networks/default",
            "priority": 1000,
            "project": "infra-273217",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-11T10:51:49.470-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/networks/default",
            "priority": 1000,
            "project": "infra-273217",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-11T10:51:49.555-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/networks/default",
            "priority": 1000,
            "project": "infra-273217",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "90.154.70.34/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/images/reddit-base-1587102199",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-273217/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "reddit-app",
            "instance_id": "3017284453955260885",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC4lw7sAocK9fDBFbDT8VrL2JrZ0Dt2D+UCHFfFzAbunCq6Gi0yUlrgBzY+fGBsSh8zpy5yjPvLLbW3BFuovFeqIHsebYM3mCE/PveNKYeCximIYmoNIu2lHff0BTom3bxqZvpiHmPzd4eZZRyN9adPtQf+z+dML6KaNApCiFGyVUoaictx55Rtg7iToJdVcwkKD0Zr9Pr/Iz9dA/CMxDjh/QIHgoDpaMXBSAghBfQrVZ3MblT3B3ye77Oi7GwlXF8M+/5qGhYh3KvYvuOqIb/4Sj82H4ZyoxbkFcaOoPmjKIHczNrYtUr+t4UYRu4L1gIZHb98E2crulok0eP4p9Hn appuser\n"
            },
            "metadata_fingerprint": "imGsrbE9qK4=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.241.233.68",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/networks/default",
                "network_ip": "10.132.0.41",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-273217/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-273217"
              }
            ],
            "project": "infra-273217",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-273217/zones/europe-west1-b/instances/reddit-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/images/reddit-base-1587102199",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-273217/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "reddit-db",
            "instance_id": "2529096077132419545",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC4lw7sAocK9fDBFbDT8VrL2JrZ0Dt2D+UCHFfFzAbunCq6Gi0yUlrgBzY+fGBsSh8zpy5yjPvLLbW3BFuovFeqIHsebYM3mCE/PveNKYeCximIYmoNIu2lHff0BTom3bxqZvpiHmPzd4eZZRyN9adPtQf+z+dML6KaNApCiFGyVUoaictx55Rtg7iToJdVcwkKD0Zr9Pr/Iz9dA/CMxDjh/QIHgoDpaMXBSAghBfQrVZ3MblT3B3ye77Oi7GwlXF8M+/5qGhYh3KvYvuOqIb/4Sj82H4ZyoxbkFcaOoPmjKIHczNrYtUr+t4UYRu4L1gIZHb98E2crulok0eP4p9Hn appuser\n"
            },
            "metadata_fingerprint": "imGsrbE9qK4=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.122.237",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-273217/global/networks/default",
                "network_ip": "10.132.0.40",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-273217/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-273217"
              }
            ],
            "project": "infra-273217",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-273217/zones/europe-west1-b/instances/reddit-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}